[tool.poetry]
name = "pieces-cli"
version = "1.3.1"
description = "A powerful cli tool to interact with PiecesOS "
authors = ["Pieces <development@pieces.app>"]
readme = "README.md"
homepage = "https://pieces.app"
repository = "https://github.com/pieces-app/cli-agent"
keywords = ["copilot", "pieces", "ai", "snippets", "materials"]
packages = [{ include = "pieces", from = "src" }]
license = "MIT"


[tool.poetry.dependencies]
python = ">=3.11,<3.14"
pyperclip = ">=1.8.2"
pieces_os_client = "4.1.0"
prompt-toolkit = "^3.0.43"
rich = "^13.7.1"
platformdirs = "^4.2.0"
pyyaml = "^6.0.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pyinstaller = "^6.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
pieces = "pieces.app:main"
