[tool.poetry]
name = "pieces-cli"
version = "1.3.1"
description = "A powerful cli tool to interact with PiecesOS "
authors = ["Pieces <development@pieces.app>"]
readme = "README.md"
homepage = "https://pieces.app"
repository = "https://github.com/pieces-app/cli-agent"
keywords = ["copilot", "pieces", "ai", "snippets", "materials"]
packages = [{ include = "pieces", from = "src" }]
license = "MIT"
include = [
  { path = "src/pieces/completions/*", format = [
    "sdist",
    "wheel",
  ] },
  { path = "LICENSE", format = [
    "sdist",
    "wheel",
  ] },
]


[tool.ruff]
lint.ignore = [
  "E501", # Line too long
]

[tool.poetry.dependencies]
python = ">=3.11,<3.15"
pyperclip = ">=1.8.2"
prompt-toolkit = "^3.0.43"
rich = "^14.2.0"
textual = { extras = ["syntax"], version = "^5.3.0", optional = true }
platformdirs = "^4.2.0"
pyyaml = "^6.0.2"
mcp = "1.17.0"
pydantic = "2.12.0"
sentry-sdk = "^2.34.1"

## POS dependencies
urllib3 = ">= 2.5.0"
python-dateutil = ">=2.8.2"
typing-extensions = ">= 4.7.1"
websocket-client = "^1.8.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pyinstaller = "^6.13.0"
requests = "^2.31.0"
pytest-asyncio = "^1.0.0"
textual-dev = "1.7.0"

[tool.poetry.extras]
tui = ["textual"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
pieces = "pieces.app:main"

[tool.pytest.ini_options]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
